fixed spacing in stylesheet

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -292,8 +292,7 @@ footer {
   margin: 0px 0px 0px 0px;
 }
 
-<<<<<<< HEAD
-.faveBtn{
+.faveBtn {
   height: 38px;
   padding: 0 30px;
   font-size: 11px;
@@ -303,8 +302,6 @@ footer {
 }
 
 // * * * * * * FOOTER PAGES * * * * * *
-=======
->>>>>>> recipeindexbootstrap
 
 // .footer-about-container {
 //   display: flex;
